Bug 428727 - Doesn't open in two-column view by default
Summary: Doesn't open in two-column view by default
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_users (other bugs)
Version First Reported In: 5.20.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Janet Blackquill
URL:
Keywords: regression
: 428787 428901 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-05 13:31 UTC by medin
Modified: 2020-12-08 22:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Inconsistent layout between maximized and normal view of User Manager window (566.64 KB, video/mp4)
2020-11-05 13:31 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2020-11-05 13:31:44 UTC
Created attachment 133050 [details]
Inconsistent layout between maximized and normal view of User Manager window

When I open User Manager in maximized window the list of users and the user details are separated and when the window is not maximized they appear on same view. But when the window is again maximized it doesn't revert to separated view layout. See attached video for more info.
Comment 1 Nate Graham 2020-11-05 14:15:28 UTC
Yup, I can reproduce. In fact, it seems that everyone can reproduce except for the author. :)

The problem is that you need to somehow resize the window before it will display the multi-column view, even when there's enough space.

Carson, can you please take another look at this?
Comment 2 Bug Janitor Service 2020-11-06 02:31:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kcmutils/-/merge_requests/28
Comment 3 Nate Graham 2020-11-09 18:45:23 UTC
*** Bug 428787 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2020-11-09 18:49:38 UTC
*** Bug 428901 has been marked as a duplicate of this bug. ***
Comment 5 Janet Blackquill 2020-12-08 22:59:22 UTC
Git commit 584b695cd1f14cc98c4f08eeeabcf57fb79dc0e8 by Jan Blackquill, on behalf of Carson Black.
Committed on 08/12/2020 at 22:59.
Pushed by cblack into branch 'master'.

kcmoduleqml: don't bind column width to view width

This causes a lot of heisenbugs due to bindings triggering at inconsistent times, sometimes causing a KCM's requested width to be respected, and other times, causing it to be ignored. Since we're going to be setting this from C++ code, we don't need to create a QML binding for this.

M  +0    -2    src/kcmoduleqml.cpp

https://invent.kde.org/frameworks/kcmutils/commit/584b695cd1f14cc98c4f08eeeabcf57fb79dc0e8